--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
         <tr>
             <td><a href="">Sept. 26</a></td>
             <td>
-                Dimensionality Reduction; Spectral Decomposition and
-                Principal Component Analysis.
+                Dimensionality Reduction; Spectral Decomposition, Singular Value Decomposition,
+                and Principal Component Analysis.
                 </br></br>
 
                 Generative Learning Algorithms.
