updates to info page

--- a/info/index.html
+++ b/info/index.html
@@ -33,8 +33,8 @@
         <div class="left-align">
         <h3> Meeting Times </h3>
         <p>
-            M_ 06:30-09:15PM. SHAN 3481 (Lecture)</br>
-            Tr 06:30-08:00PM. SHAN 3481 (Optional Section)</br>
+            M_ 06:30-09:15PM. SHAN B460 (Lecture)</br>
+            Tr 06:30-08:00PM. SHAN B460 (Optional Section)</br>
         </p>
 
         <h3> Summary of Goals </h3>
@@ -291,8 +291,40 @@
             </thead>
             <tbody>
                 <tr>
-                    <th>Conner DiPaolo</th>
+                    <th>Conner DiPaolo (head grader/tutor)</th>
                     <th>cdipaolo</th>
+                </tr>
+                <tr>
+                    <th>Paul David (CGU Graduate Student)</th>
+                    <th>paul.david (@cgu.edu)</th>
+                </tr>
+                <tr>
+                    <th>Kathryn Dover</th>
+                    <th>kdover</th>
+                </tr>
+                <tr>
+                    <th>Zoe Tucker</th>
+                    <th>ztucker</th>
+                </tr>
+                <tr>
+                    <th>Ricky Pan</th>
+                    <th>rpan</th>
+                </tr>
+                <tr>
+                    <th>Natchanon Suaysom</th>
+                    <th>nsuaysom</th>
+                </tr>
+                <tr>
+                    <th>Mek Jenrungrot</th>
+                    <th>mgenrungrot</th>
+                </tr>
+                <tr>
+                    <th>Herrick Fang</th>
+                    <th>hfang</th>
+                </tr>
+                <tr>
+                    <th>Nick Draper</th>
+                    <th>ndraper</th>
                 </tr>
             </tbody>
         </table>
