update reading to include MVN chapter

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 a Regularizer.
                 </br></br>
 
-                <b>Read:</b> Murphy 9.7 (short)</br>
+                <b>Read:</b> Murphy 9.7, </br>4.{1,2,3,4,5,6} (important background)</br>
                 <b>Due:</b> <a href="homework/sept_19.pdf">Homework 1</a></br>
             </td>
             <td>
