--- a/info/index.html
+++ b/info/index.html
@@ -316,7 +316,7 @@
                 </tr>
                 <tr>
                     <th>Mek Jenrungrot</th>
-                    <th>mgenrungrot</th>
+                    <th>mjenrungrot</th>
                 </tr>
                 <tr>
                     <th>Herrick Fang</th>
