--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <tbody>
 
         <tr>
-            <td></td>
+            <td>Aug. 29</td>
             <td></td>
             <td>
                 <a href="materials/section/linear.pdf">Linear Algebra and Matrix Calculus Review</a></br></br>
@@ -79,6 +79,7 @@
                 Regression as a GLM.</br></br>
 
                 <b>Read:</b> Murphy, 8.{1,2,3,5} \ 8.{3.4,3.5}, 9.{1,2.2,2.4,3}
+                <b>Due:</b> <a href="hw/pset/sept_19.pdf">Homework 1 (first half)</a></br>
             </td>
             <td>
                 <a href="materials/section/convex.pdf">Convex Optimization</br>Overview II</a>
@@ -97,7 +98,7 @@
                 </br></br>
 
                 <b>Read:</b> Murphy 9.7, </br>4.{1,2,3,4,5,6} (important background)</br>
-                <b>Due:</b> <a href="homework/sept_19.pdf">Homework 1</a></br>
+                <b>Due:</b> <a href="hw/pset/sept_19.pdf">Homework 1</a></br>
             </td>
             <td>
             </td>
@@ -115,6 +116,7 @@
 
                 <b>Read:</b> Murphy 4.{1,2,3,4} \ 4.{3.3}</br></br>
                 <b>Due:</b> Final Project Proposal
+                <b>Due:</b> <a href="hw/pset/oct_3.pdf">Homework 2 (first half)</a>
             </td>
             <td>
             </td>
@@ -127,7 +129,7 @@
 
                 <b>Read:</b> Murphy 14.{1,2,3,4} \ 14.{4.4}</br>
                 <b>Read:</b> <a href="http://static.googleusercontent.com/media/research.google.com/en//archive/mapreduce-osdi04.pdf">MapReduce: Simplified Data Processing on Large Clusters</a></br>
-                <b>Due:</b> <a href="homework/oct_3.pdf">Homework 2</a>
+                <b>Due:</b> <a href="hw/pset/oct_3.pdf">Homework 2</a>
             </td>
             <td>
                 <a href="materials/section/mapreduce.pdf">MapReduce and</br>Distributed Computation</br> and Learning</a>
@@ -180,7 +182,7 @@
 
                 <b>Read:</b> <a href="http://papers.nips.cc/paper/4337-large-scale-sparse-principal-component-analysis-with-application-to-text-data.pdf">Large-Scale Sparse Principal Component Analysis with Application to Text Data</a></br>
                 <b>Read:</b> <a href="http://projecteuclid.org/download/pdf_1/euclid.aos/1176346060">On the Convergence Properties of the EM Algorithm</a></br>
-                <b>Due:</b> <a href="homework/oct_31.pdf">Homework 3</a>
+                <b>Due:</b> <a href="hw/pset/oct_31.pdf">Homework 3</a>
             </td>
             <td>
                 <a href="materials/section/deployment.pdf">Evaluating Models; Deployment</a>
@@ -198,6 +200,7 @@
 
                 <b>Read:</b> Murphy 27.6.2</br>
                 <b>Read:</b> <a href="http://sifter.org/~simon/journal/20061211.html">Netflix Update: Try This at Home</a></br>
+                <b>Due:</b> <a href="hw/pset/nov_14.pdf">Homework 4 (first half)</a>
             </td>
             <td>
                 <a href="materials/section/music.pdf">Application: Music Recommendation</a>
@@ -217,7 +220,7 @@
                 </br></br>
 
                 <b>Read:</b> Murphy 10.{1,2,3,4,5,6}</br>
-                <b>Due:</b> <a href="homework/nov_14.pdf">Homework 4</a>
+                <b>Due:</b> <a href="hw/pset/nov_14.pdf">Homework 4</a>
             </td>
             <td></td>
         </tr>
@@ -232,6 +235,7 @@
                 Motivation for Approximate Methods.</br></br>
 
                 <b>Read:</b> Murphy 5.{1,2,3.0,3.2} 7.6, 8.4</br>
+                <b>Due:</b> <a href="hw/pset/nov_28.pdf">Homework 5 (first half)</a>
             </td>
             <td>Thanksgiving</td>
         </tr>
@@ -247,7 +251,7 @@
                 <b>Read:</b> Murphy 23.{1,2,3,4} \ 23.4.3,
                                     24.{1,2.(1,2,3,4), 3,4} \ 24.{3.7}</br>
                 <b>Optional Read:</b> Murphy 24.{5,6}
-                <b>Due:</b> <a href="homework/nov_28.pdf">Homework 5</a>
+                <b>Due:</b> <a href="hw/pset/nov_28.pdf">Homework 5</a>
             </td>
             </td>
             <td>
