removed unnecessary sections of site

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
     <div class="header">
         <h2> <a href="index.html">math189r</a> </h2>
         <h3>
-            <a href="info/">Info</a> |
-            <a href="hw/">Homework</a> |
-            <a href="materials/">Materials</a>
+            <a href="info/">Info</a>
         </h3>
     </div>
 
