--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
                 <b>Due:</b> <a href="hw/pset/sept_19.pdf">Homework 1 (first half)</a></br>
             </td>
             <td>
-                <a href="materials/section/convex.pdf">Convex Optimization</br>Overview II</a>
+                <a href="materials/section/convex.pdf">Convex Optimization</br>Overview II</a></br></br>
+                Tutorial on Scientific Python
             </td>
         </tr>
         <tr>
