add first lecture notes

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <!-- Supervised Learning -->
         <tr>
-            <td><b>Supervised Learning</b></br><a href="">Sept. 5</a></td>
+            <td><b>Supervised Learning</b></br><a href="notes/week_1/lecture.pdf">Sept. 5</a></td>
             <td>
                 Introduction to Big Data. Linear Regression. Normal
                 Equations and Optimization Techniques. Solving the Normal
