added probability review

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 Regression as a GLM.</br></br>
 
                 <b>Read:</b> Murphy, 8.{1,2,3,5} \ 8.{3.4,3.5}, 9.{1,2.2,2.4,3}
-                <b>Due:</b> <a href="hw/pset/sept_19.pdf">Homework 1 (first half)</a></br>
+                <b>Due:</b> <a href="hw/pset/sept_19.pdf">Homework 1 (first half)</a> <a href="hw/pset/sept_19_sol.pdf">(solutions)</a></br>
             </td>
             <td>
                 <a href="materials/section/convex.pdf">Convex Optimization</br>Overview II</a></br></br>
