--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <td></td>
             <td>
                 <a href="materials/section/linear.pdf">Linear Algebra and Matrix Calculus Review</a></br></br>
-                <a href="materials/section/convex.pdf">Convex Optimization</br>Overview I</a>
-                <a href="notes/week_0/linear_convex_review.pdf">(notes from review)</a></br>
+                <a href="materials/section/convex.pdf">Convex Optimization</br>Overview I</a> </br></br>
+                <a href="notes/week_0/linear_convex_review.pdf">(notes from review)</a>
             </td>
         </tr>
 
@@ -65,8 +65,8 @@
                 <b>Read:</b> Murphy, 7.{1,...,5}
             </td>
             <td>
-                <a href="http://cs229.stanford.edu/section/cs229-prob.pdf">Probability Review</a></br>
-                <a href="notes/week_1/probability_review.pdf">(notes from review)</a></br>
+                <a href="http://cs229.stanford.edu/section/cs229-prob.pdf">Probability Review</a></br></br>
+                <a href="notes/week_1/probability_review.pdf">(notes from review)</a></br></br>
                 (also Murphy 2.{all} is a great resource)
             </td>
         </tr>
