update homework schedule

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 Regression as a GLM.</br></br>
 
                 <b>Read:</b> Murphy, 8.{1,2,3,5} \ 8.{3.4,3.5}, 9.{1,2.2,2.4,3}
-                <b>Due:</b> <a href="hw/pset/sept_19.pdf">Homework 1 (first half)</a> <a href="hw/pset/sept_19_sol.pdf">(solutions)</a></br>
+                <b>Due:</b> <a href="hw/pset/sept_19.pdf">Homework 1 (first third)</a> <a href="hw/pset/sept_19_sol.pdf">(solutions)</a></br>
             </td>
             <td>
                 <a href="materials/section/convex.pdf">Convex Optimization</br>Overview II</a></br></br>
@@ -99,7 +99,7 @@
                 </br></br>
 
                 <b>Read:</b> Murphy 9.7, </br>4.{1,2,3,4,5,6} (important background)</br>
-                <b>Due:</b> <a href="hw/pset/sept_19.pdf">Homework 1</a></br>
+                <b>Due:</b> <a href="hw/pset/sept_19.pdf">Homework 1 (second third)</a></br>
             </td>
             <td>
             </td>
@@ -117,7 +117,7 @@
 
                 <b>Read:</b> Murphy 4.{1,2,3,4} \ 4.{3.3}</br></br>
                 <b>Due:</b> Final Project Proposal
-                <b>Due:</b> <a href="hw/pset/oct_3.pdf">Homework 2 (first half)</a>
+                <b>Due:</b> <a href="hw/pset/sept_19.pdf">Homework 1 (last third)</a>
             </td>
             <td>
             </td>
@@ -130,7 +130,7 @@
 
                 <b>Read:</b> Murphy 14.{1,2,3,4} \ 14.{4.4}</br>
                 <b>Read:</b> <a href="http://static.googleusercontent.com/media/research.google.com/en//archive/mapreduce-osdi04.pdf">MapReduce: Simplified Data Processing on Large Clusters</a></br>
-                <b>Due:</b> <a href="hw/pset/oct_3.pdf">Homework 2</a>
+                <b>Due:</b> <a href="hw/pset/oct_10.pdf">Homework 2 (first half)</a>
             </td>
             <td>
                 <a href="materials/section/mapreduce.pdf">MapReduce and</br>Distributed Computation</br> and Learning</a>
@@ -148,6 +148,7 @@
                 <b>Read:</b> Murphy 11.{1,2,3,4} \ 11.{4.6,4.9}</br>
                 <b>Read:</b> <a href="http://www.ee.oulu.fi/research/imag/courses/Vedaldi/ShalevSiSr07.pdf">Pegasos: Primal Estimated sub-GrAdient SOlver for SVM</a></br>
                 <b>Read:</b> <a href="https://people.eecs.berkeley.edu/~brecht/papers/07.rah.rec.nips.pdf">Random Features for Large-Scale Kernel Machines</a> (deep insight)
+                <b>Due:</b> <a href="hw/pset/oct_10.pdf">Homework 2 (second half)</a>
             </td>
             <td>
                 <a href="materials/section/hmm.pdf">Applications of EM: Hidden Markov Models</a>
