update info page

--- a/info/index.html
+++ b/info/index.html
@@ -15,9 +15,7 @@
     <div class="header">
         <h2> <a href="/">math189r</a> </h2>
         <h3>
-            <a href="info/">Info</a> |
-            <a href="hw/">Homework</a> |
-            <a href="materials/">Materials</a>
+            <a href="info/">Info</a>
         </h3>
     </div>
 
@@ -75,9 +73,7 @@
             these tools are <i>extremely</i> prevalent in industry
             and academia when developing and deploying models. To
             that end, all code for homework and your final project
-            will be hosted on GitHub, and the expectation that you will
-            become familiar with AWS Elastic Map Reduce (EMR) as
-            the course progresses to handle huge datasets.
+            will be hosted on GitHub.
         </p>
 
         <h3> Structure </h3>
@@ -150,11 +146,6 @@
             The homework is split approximately evenly between
             mathematical analysis and extension of our course material
             and application of algorithms to real world data.</br></br>
-
-            Just like the final project, all code you create for the
-            homework should reside in a GitHub repository under your
-            personal GitHub account with a directory for each homework
-            (where each directory is titles hw_1, hw_2, etc).
         </p>
 
         <h3> Midterm </h3>
@@ -233,7 +224,7 @@
                 URL somewhere in your final pdf. This is not required but
                 it is recommended to place your code under
                 <a href="http://choosealicense.com/">some open-source license</a>
-                such as <a ref="http://choosealicense.com/licenses/mit/">MIT</a>.
+                such as <a href="http://choosealicense.com/licenses/mit/">MIT</a>.
             </li>
         </ul>
         <h4> Due Dates </h4>
@@ -323,8 +314,8 @@
                     <th>hfang</th>
                 </tr>
                 <tr>
-                    <th>Nick Draper</th>
-                    <th>ndraper</th>
+                    <th>Bo Zhang</th>
+                    <th>bzhang</th>
                 </tr>
             </tbody>
         </table>
