fix broken link

--- a/info/index.html
+++ b/info/index.html
@@ -15,7 +15,7 @@
     <div class="header">
         <h2> <a href="/">math189r</a> </h2>
         <h3>
-            <a href="info/">Info</a>
+            <a href="#">Info</a>
         </h3>
     </div>
 
