--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </td>
         </tr>
         <tr>
-            <td><a href="">Sept. 12</a></td>
+            <td><a href="notes/week_1/lecture.pdf">Sept. 12</a></td>
             <td>
                 Classification. K-Nearest Neighbors. 
                 Logistic Regression. Exponential
@@ -87,7 +87,7 @@
             </td>
         </tr>
         <tr>
-            <td><a href="">Sept. 19</a></td>
+            <td><a href="notes/week_2/lecture.pdf">Sept. 19</a></td>
             <td>
                 Generalized Linear Models continued.
                 Poisson Regression. Softmax Regression.
