add scipy help session to website

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
                 <b>Due:</b> <a href="hw/pset/sept_19.pdf">Homework 1 (last third)</a>
             </td>
             <td>
+                Scientific Computing Review / Help Session
             </td>
         </tr>
         <tr>
