added sept 26 notes

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </td>
         </tr>
         <tr>
-            <td><a href="">Sept. 26</a></td>
+            <td><a href="notes/week_3/lecture.pdf">Sept. 26</a></td>
             <td>
                 Dimensionality Reduction; Spectral Decomposition, Singular Value Decomposition,
                 and Principal Component Analysis.
