add to course syllabus what was covered in class

--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
         <tr>
             <td><a href="">Oct.  3</a></td>
             <td>
-                Naive Bayes.
-                Support Vector Machines. Kernels.</br></br>
+                Naive Bayes. L1 Regularization and Sparsity.
+                Lasso. Support Vector Machines. Kernels.</br></br>
 
                 <b>Read:</b> Murphy 14.{1,2,3,4} \ 14.{4.4}</br>
                 <b>Read:</b> <a href="http://static.googleusercontent.com/media/research.google.com/en//archive/mapreduce-osdi04.pdf">MapReduce: Simplified Data Processing on Large Clusters</a></br>
