update thursday schedule

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <b>Due:</b> <a href="hw/pset/oct_10.pdf">Homework 2 (first half)</a>
             </td>
             <td>
-                <a href="materials/section/mapreduce.pdf">MapReduce and</br>Distributed Computation</br> and Learning</a>
+                Midterm Review
             </td>
         </tr>
 
@@ -151,13 +151,15 @@
                 <b>Due:</b> <a href="hw/pset/oct_10.pdf">Homework 2 (second half)</a>
             </td>
             <td>
-                <a href="materials/section/hmm.pdf">Applications of EM: Hidden Markov Models</a>
+                <a href="materials/section/mapreduce.pdf">MapReduce and</br>Distributed Computation</br> and Learning</a>
             </td>
         </tr>
         <tr>
             <td><a href="">Oct.  17</a></td>
             <td>Fall Break</td>
-            <td>Fall Break</td>
+            <td>
+                <a href="materials/section/hmm.pdf">Applications of EM: Hidden Markov Models</a>
+            </td>
         </tr>
         <tr>
             <td><a href="">Oct.  24</a></td>
