add solution link for oct_10

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
                 <b>Read:</b> Murphy 14.{1,2,3,4} \ 14.{4.4}</br>
                 <b>Read:</b> <a href="http://static.googleusercontent.com/media/research.google.com/en//archive/mapreduce-osdi04.pdf">MapReduce: Simplified Data Processing on Large Clusters</a></br>
-                <b>Due:</b> <a href="hw/pset/oct_10.pdf">Homework 2 (first half)</a>
+                <b>Due:</b> <a href="hw/pset/oct_10.pdf">Homework 2 (first half)</a> <a href="hw/pset/oct_10_sol.pdf">(solutions)</a>
             </td>
             <td>
                 Midterm Review
