--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
                 Motivation for Approximate Methods.</br></br>
 
                 <b>Read:</b> Murphy 5.{1,2,3.0,3.2} 7.6, 8.4</br>
+                <b>Read:</b> <a href="https://hips.seas.harvard.edu/files/adams-changepoint-tr-2007.pdf">Bayesian Online Changepoint Detection</a></br>
                 <b>Due:</b> <a href="hw/pset/nov_28.pdf">Homework 5 (first half)</a>
             </td>
             <td>Thanksgiving</td>
