added week_4 and week_5 lecture notes

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             </td>
         </tr>
         <tr>
-            <td><a href="">Oct.  3</a></td>
+            <td><a href="notes/week_4/lecture.pdf">Oct.  3</a></td>
             <td>
                 Naive Bayes. L1 Regularization and Sparsity.
                 Lasso. Support Vector Machines. Kernels.</br></br>
@@ -139,7 +139,7 @@
 
         <!-- Unsupervised Learning -->
         <tr>
-            <td><b> Unsupervised Learning </b></br><a href="">Oct.  10</a></td>
+            <td><b> Unsupervised Learning </b></br><a href="notes/week_5/lecture.pdf">Oct.  10</a></td>
             <td>
                 Introduction to Unsupervised Learning.
                 Clustering. K-Means. Mixture of Gaussians.
