--- a/index.html
+++ b/index.html
@@ -151,14 +151,14 @@
                 <b>Due:</b> <a href="hw/pset/oct_10.pdf">Homework 2 (second half)</a>
             </td>
             <td>
-                <a href="materials/section/mapreduce.pdf">MapReduce and</br>Distributed Computation</br> and Learning</a>
+                <a href="materials/section/constrained_optimization.pdf">Constrained Optimization</a>
             </td>
         </tr>
         <tr>
             <td><a href="">Oct.  17</a></td>
             <td>Fall Break</td>
             <td>
-                <a href="materials/section/hmm.pdf">Applications of EM: Hidden Markov Models</a>
+                <a href="materials/section/mapreduce.pdf">MapReduce and</br>Distributed Computation</br> and Learning</a>
             </td>
         </tr>
         <tr>
@@ -174,7 +174,7 @@
                 <b>Due:</b> Final Project Progress Report.
             </td>
             <td>
-                <a href="materials/section/sparse_svm.pdf">Sparsity; SVM Training</a>
+                <a href="materials/section/hmm.pdf">Applications of EM: Hidden Markov Models</a>
             </td>
         </tr>
         <tr>
