update hw schedule

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
                 <b>Read:</b> Murphy 11.{1,2,3,4} \ 11.{4.6,4.9}</br>
                 <b>Read:</b> <a href="http://www.ee.oulu.fi/research/imag/courses/Vedaldi/ShalevSiSr07.pdf">Pegasos: Primal Estimated sub-GrAdient SOlver for SVM</a></br>
-                <b>Read:</b> <a href="https://people.eecs.berkeley.edu/~brecht/papers/07.rah.rec.nips.pdf">Random Features for Large-Scale Kernel Machines</a> (deep insight)
+                <b>Read:</b> <a href="https://people.eecs.berkeley.edu/~brecht/papers/07.rah.rec.nips.pdf">Random Features for Large-Scale Kernel Machines</a> (deep insight)</br>
                 <b>Due:</b> <a href="hw/pset/oct_10.pdf">Homework 2 (second half)</a>
             </td>
             <td>
@@ -186,7 +186,7 @@
 
                 <b>Read:</b> <a href="http://papers.nips.cc/paper/4337-large-scale-sparse-principal-component-analysis-with-application-to-text-data.pdf">Large-Scale Sparse Principal Component Analysis with Application to Text Data</a></br>
                 <b>Read:</b> <a href="http://projecteuclid.org/download/pdf_1/euclid.aos/1176346060">On the Convergence Properties of the EM Algorithm</a></br>
-                <b>Due:</b> <a href="hw/pset/oct_31.pdf">Homework 3</a>
+                <b>Due:</b> <a href="hw/pset/nov_7.pdf">Homework 3 (first half)</a>
             </td>
             <td>
                 <a href="materials/section/deployment.pdf">Evaluating Models; Deployment</a>
@@ -204,7 +204,7 @@
 
                 <b>Read:</b> Murphy 27.6.2</br>
                 <b>Read:</b> <a href="http://sifter.org/~simon/journal/20061211.html">Netflix Update: Try This at Home</a></br>
-                <b>Due:</b> <a href="hw/pset/nov_14.pdf">Homework 4 (first half)</a>
+                <b>Due:</b> <a href="hw/pset/nov_7.pdf">Homework 3 (second half)</a>
             </td>
             <td>
                 <a href="materials/section/music.pdf">Application: Music Recommendation</a>
@@ -224,7 +224,7 @@
                 </br></br>
 
                 <b>Read:</b> Murphy 10.{1,2,3,4,5,6}</br>
-                <b>Due:</b> <a href="hw/pset/nov_14.pdf">Homework 4</a>
+                <b>Due:</b> <a href="hw/pset/nov_21.pdf">Homework 4 (first half)</a>
             </td>
             <td></td>
         </tr>
@@ -240,7 +240,7 @@
 
                 <b>Read:</b> Murphy 5.{1,2,3.0,3.2} 7.6, 8.4</br>
                 <b>Read:</b> <a href="https://hips.seas.harvard.edu/files/adams-changepoint-tr-2007.pdf">Bayesian Online Changepoint Detection</a></br>
-                <b>Due:</b> <a href="hw/pset/nov_28.pdf">Homework 5 (first half)</a>
+                <b>Due:</b> <a href="hw/pset/nov_21.pdf">Homework 4 (second half)</a>
             </td>
             <td>Thanksgiving</td>
         </tr>
@@ -256,7 +256,7 @@
                 <b>Read:</b> Murphy 23.{1,2,3,4} \ 23.4.3,
                                     24.{1,2.(1,2,3,4), 3,4} \ 24.{3.7}</br>
                 <b>Optional Read:</b> Murphy 24.{5,6}
-                <b>Due:</b> <a href="hw/pset/nov_28.pdf">Homework 5</a>
+                <b>Due:</b> <a href="hw/pset/nov_28.pdf">Homework 5 (all)</a>
             </td>
             </td>
             <td>
