added week 7 lecture

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             </td>
         </tr>
         <tr>
-            <td><a href="">Oct.  24</a></td>
+            <td><a href="notes/week_7/lecture.pdf">Oct.  24</a></td>
             <td>
                 Principal Component Analysis (PCA) Review.
                 Kernel PCA. One Class Support Vector
