added exam statistics

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
                 <b>Read:</b> Murphy 12.2.{0,1,2,3} 14.4.4</br>
                 <b>Read:</b> <a href="http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.675.575&rep=rep1&type=pdf"> Support Vector Method for Novelty Detection</a></br>
-                <b>Due:</b> <a href="exam/math189r_fall_2016_midterm.pdf">Midterm</a>. (<a href="exam/math189r_fall_2016_midterm_solution.pdf">solutions</a>)</br>
+                <b>Due:</b> <a href="exam/math189r_fall_2016_midterm.pdf">Midterm</a>. (<a href="exam/math189r_fall_2016_midterm_solution.pdf">solutions</a>) (<a href="exam/results.txt">results</a>)</br>
                 <b>Due:</b> Final Project Progress Report.
             </td>
             <td>
