added nov_7 solutions (except extra credit problem, on purpose)

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
                 <b>Read:</b> <a href="http://papers.nips.cc/paper/4337-large-scale-sparse-principal-component-analysis-with-application-to-text-data.pdf">Large-Scale Sparse Principal Component Analysis with Application to Text Data</a></br>
                 <b>Read:</b> <a href="http://projecteuclid.org/download/pdf_1/euclid.aos/1176346060">On the Convergence Properties of the EM Algorithm</a></br>
-                <b>Due:</b> <a href="hw/pset/nov_7.pdf">Homework 3 (first half)</a>
+                <b>Due:</b> <a href="hw/pset/nov_7.pdf">Homework 3 (first half)</a> (<a href="hw/pset/nov_7_sol.pdf">solutions</a>)
             </td>
             <td>
                 <a href="materials/section/hmm.pdf">Applications of EM: Hidden Markov Models</a>
