add lecture 8 notes

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             </td>
         </tr>
         <tr>
-            <td><b> Learning Theory </b></br><a href="">Oct.  31</a></td>
+            <td><b> Learning Theory </b></br><a href="notes/week_8/lecture.pdf">Oct.  31</a></td>
             <td>
                 Learning Theory. VC Dimension. Bias/Variance
                 Trade-off. Union and Chernoff/Hoeffding
