add thursday section

--- a/index.html
+++ b/index.html
@@ -226,7 +226,9 @@
                 <b>Read:</b> Murphy 10.{1,2,3,4,5,6}</br>
                 <b>Due:</b> <a href="hw/pset/nov_21.pdf">Homework 4 (first half)</a>
             </td>
-            <td></td>
+            <td>
+                <a href="materials/section/xsede.pdf">XSEDE Demo</a>
+            </td>
         </tr>
 
         <!-- Bayesian Learning -->
