added solution for nov_21

--- a/index.html
+++ b/index.html
@@ -207,7 +207,6 @@
                 <b>Due:</b> <a href="hw/pset/nov_7.pdf">Homework 3 (second half)</a>
             </td>
             <td>
-                <a href="materials/section/music.pdf">Application: Music Recommendation</a>
             </td>
         </tr>
 
@@ -224,7 +223,7 @@
                 </br></br>
 
                 <b>Read:</b> Murphy 10.{1,2,3,4,5,6}</br>
-                <b>Due:</b> <a href="hw/pset/nov_21.pdf">Homework 4 (first half)</a>
+                <b>Due:</b> <a href="hw/pset/nov_21.pdf">Homework 4 (first half)</a> (<a href="hw/pset/nov_21_sol.pdf">solutions</a>)
             </td>
             <td>
                 <a href="materials/section/xsede.pdf">XSEDE Demo</a>
