add solutions to index.html

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 <b>Read:</b> Murphy 23.{1,2,3,4} \ 23.4.3,
                                     24.{1,2.(1,2,3,4), 3,4} \ 24.{3.7}</br>
                 <b>Optional Read:</b> Murphy 24.{5,6}
-                <b>Due:</b> <a href="hw/pset/nov_28.pdf">Homework 5 (all)</a>
+                <b>Due:</b> <a href="hw/pset/nov_28.pdf">Homework 5 (all)</a> (<a href="hw/pset/nov_28_sol.pdf">solutions</a>)
             </td>
             </td>
             <td>
